@@ -68,6 +68,32 @@ include keys.cfg
   </test>
 </test>
 
+<test check-z85>
+  <test check-z85-1-compliant>
+    cmd = ./decodertest 1
+    expect = /ok/
+  </test>
+
+  <test check-z85-2-compliant-no-newlines>
+    cmd = ./decodertest 2
+    expect = /ok/
+  </test>
+
+  <test check-z85-3-compliant-no-begin-header>
+    cmd = ./decodertest 3
+    expect = /ok/
+  </test>
+
+  <test check-z85-4-uncompliant-empty-comment>
+    cmd = ./decodertest 4
+    expect = /ok/
+  </test>
+
+  <test check-z85-5-uncompliant-missing-char>
+    cmd = ./decodertest 5
+    expect = /ok/
+  </test>
+</test>
 
 <test check-show-help>
   cmd    = $pcp -h
@@ -491,10 +517,6 @@ temporarily disabled
   expect = /contain any keys so far./
 </test>
 
-<test check-encryptionkeys-dont-collide>
-  cmd = ./pwhashes
-  expect = /ok/
-</test>
 
 
 
